--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3202,7 +3202,7 @@
    "source": [
     "# Methods and Plan\n",
     "\n",
-    "I will use bootstrapping inference to estimate a plausible range for university student session start times. This method was chosen because it doesn’t require a specific data distribution and works well with time-based trends. This method assumes that the player data reflects the broader university population. If the data is biased, bootstrapping may not accurately model the university student population. The bootstrapping process involves sampling with replacement from the original data to calculate average start times which generate a distribution. A 95% percentile bootstrap confidence interval can then be calculated to determine the typical session start time. \n",
+    "I will use bootstrapping inference to estimate a plausible range for university student session start times. This method was chosen because it doesn’t require a specific data distribution and works well with time-based trends. This method assumes that the player data reflects the broader university population. If the data is biased, bootstrapping may not accurately model the university student population. The bootstrapping process involves sampling with replacement from the original data to calculate average start times which generate a distribution. A 95% percentile bootstrap confidence interval can then be calculated to determine the typical session start time. No cross-validation is required. \n",
     "\n"
    ]
   },
